chore: bump version to 1.0.1 and rewrite README